Notify video creation through mail (mailcatcher)

--- a/src/Context/Video/Module/Video/Infrastructure/DependencyInjection/video_infrastructure.yml
+++ b/src/Context/Video/Module/Video/Infrastructure/DependencyInjection/video_infrastructure.yml
@@ -4,3 +4,6 @@ services:
     class: CodelyTv\Context\Video\Module\Video\Infrastructure\Persistence\VideoRepositoryMySql
     arguments:
      - '@codely.video.infrastructure.database'
+
+  codely.video.video.notifier:
+      class: CodelyTv\Context\Video\Module\Video\Infrastructure\SwiftEmailVideoNotifier
